# linear_algebra

./: RESEARCH.md  index.md  matrix.h  matrix_algebra.h
matrix_algebra_src/: classic.h  definition.h  operators.h
matrix_algebra_src/strassen_winograd/: strassen.h  strassen_parallel.h  winograd.h  winograd_parallel.h
matrix_algebra_src/strassen_winograd/old/: winograd.h  winograd_parallel.h
matrix_src/: constructors.h  definition.h  mutators.h  subfunctions.h
test/: Makefile  algebra.cc  constructors.cc  mutators.cc  test.h
test/utility/: m_random.h  m_time.h
test/winograd/: Makefile  OBIG.py  O_big.cc  functional.cc  graph.cc  graph_widget  level_load.cc  main.cc  parser.h  perf.data  speed_compare.cc  strassen_winograd
test/winograd/image_painter/: image_painter.cc  image_painter.h
test/winograd/image_painter/painters/: background.cc  colors_set.h  painter.cc
test/winograd/materials/: CMakeLists.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test5_from32.txt  test6_plusWv2.txt  test8.txt
test/winograd/optt/: classic.cc  test.cc
